fixing no scrollbar on item editor fixed background image placement updated SpeedTestTracker to show download/upload stats

--- a/wwwroot/css/settings.scss
+++ b/wwwroot/css/settings.scss
@@ -637,6 +637,9 @@ table {
     background: var(--base-darker);
     z-index:5;
     padding:2px 0.5rem;
+    .content {
+        overflow:auto;
+    }
 }
 
 .preview-dashboard {
